Randomization for existing tests